--- a/login.html
+++ b/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="ie=edge" http-equiv="X-UA-Compatible">
+
+  <link rel="stylesheet" href="build/main.css">
 </head>
 <body>
-    asdddddddddddddddddddddddd
+asddddddddd
+<script src="build/out.js"></script>
 </body>
+
 </html>
