--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="build/style.css" type="text/css">
 
-  <link rel="stylesheet" href="build/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,600;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
-<script src="build/out.js"></script>
+<script src="build/style.js"></script>
 </body>
 
 </html>
