--- a/login.html
+++ b/login.html
@@ -1,15 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
 
-  <link rel="stylesheet" href="build/main.css">
+  <link rel="stylesheet" href="build/style.css" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <style>
+    body {
+      background-image: url(./images/summer_landscape.jpg);
+      background-size: cover;
+      height: 100vh;
+      width: 100%;
+    }
+  </style>
 </head>
+
 <body>
-asddddddddd
-<script src="build/out.js"></script>
+  <main>
+    <h1 class="auth__title">Your journey begins here</h1>
+    <div class="auth__container">
+
+
+      <div class="auth__item">
+        <h2 class="auth__itemTitle">Login</h2>
+        <form class="auth__form">
+
+        </form>
+
+
+      </div>
+
+      <div class="auth__item">
+        <h2 class="auth__itemTitle">Register</h2>
+        <form class="auth__form">
+
+        </form>
+      </div>
+
+    </div>
+  </main>
+
+   <footer>
+    <a href='https://www.freepik.com/vectors/summer'>Summer vector created by upklyak - www.freepik.com</a>
+   </footer>
+  <script src="build/style.js"></script>
+  <script src="build/signIn.js"></script>
 </body>
 
 </html>
