style - login.html - login

--- a/login.html
+++ b/login.html
@@ -35,6 +35,24 @@
         <h2 class="auth__itemTitle">Login</h2>
         <form class="auth__form">
 
+          <div class="auth__inputWrapper">
+            <label>E-mail
+              <input type="email" name="eMail" placeholder="E-mail">
+            </label>
+          </div>
+
+
+          <div class="auth__inputWrapper auth__inputWrapper-left">
+            <label>E-mail
+              <input type="password" name="password" placeholder="password">
+            </label>
+          </div>
+
+          <div class="auth__submitWrapper">
+             <div></div>
+                  <button>Login</button>
+             <div></div>
+          </div>
         </form>
 
 
@@ -50,9 +68,9 @@
     </div>
   </main>
 
-   <footer>
+  <footer>
     <a href='https://www.freepik.com/vectors/summer'>Summer vector created by upklyak - www.freepik.com</a>
-   </footer>
+  </footer>
   <script src="build/style.js"></script>
   <script src="build/signIn.js"></script>
 </body>
