logic - abstract class for auth

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 
       <div class="auth__item auth__item-login">
         <h2 class="auth__itemTitle">Login</h2>
-        <form class="auth__form">
+        <form class="auth__form" id="form__login">
 
           <div class="auth__inputWrapper">
             <label>E-mail
@@ -51,7 +51,7 @@
 
           <div class="auth__submitWrapper">
             <div></div>
-            <button>Login</button>
+            <button id="btn__login">Login</button>
             <div></div>
           </div>
         </form>
@@ -59,7 +59,7 @@
 
       <div class="auth__item">
         <h2 class="auth__itemTitle">Register</h2>
-        <form class="auth__form">
+        <form class="auth__form" id="form__register">
 
 
           <div class="auth__inputWrapper">
@@ -90,7 +90,7 @@
 
           <div class="auth__submitWrapper">
             <div></div>
-            <button>Register</button>
+            <button id="btn__register" type="button">Register</button>
             <div></div>
           </div>
 
