logic - register class - catching invalid data in register form

--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
 
 
           <div class="auth__inputWrapper">
-            <strong class="register__error" id="register__invalidData-email">Invalid email</strong>
+            <strong class="register__error" id="register__invalidData-email"></strong>
             <label>E-mail
               <input type="email" name="eMail" placeholder="E-mail">
             </label>
@@ -84,7 +84,7 @@
             <label>Repeat password
               <input type="password" name="repeatPassword" placeholder="Repeat password">
             </label>
-            <strong class="register__error" id="register__invalidData-repeatPassword">Invalid password</strong>
+            <strong class="register__error" id="register__invalidData-repeatPassword"></strong>
           </div>
 
 
@@ -93,7 +93,7 @@
             <label>Nickname
               <input type="email" name="nickname" placeholder="Nickname">
             </label>
-            <span class="register__requirement" id="register__invalidData-nickanem">*Nickname should be at least 4
+            <span class="register__requirement" id="register__invalidData-nickname">*Nickname should be at least 4
               characters long.</span>
           </div>
 
