logic - register class - full build

--- a/login.html
+++ b/login.html
@@ -98,9 +98,12 @@
           </div>
 
           <div class="auth__submitWrapper">
-            <div></div>
-            <button id="btn__register" type="button">Register</button>
-            <div></div>
+            <div class="tower"></div>
+            <div class="wall">
+                <button id="btn__register" type="button">Register</button>
+                <div class="auth__loading"></div>
+            </div>
+            <div class="tower"></div>
           </div>
 
 
