logic - login class - signing user

--- a/login.html
+++ b/login.html
@@ -49,11 +49,20 @@
             </label>
           </div>
 
-          <strong class="login__invalidData" id="login__invalidData-password">Invalid data - password</strong>
+          <strong class="login__invalidData" id="login__invalidData-password"></strong>
           <div class="auth__submitWrapper">
-            <div></div>
-            <button id="btn__login">Login</button>
-            <div></div>
+
+
+            <div class="auth__submitWrapper">
+              <div class="tower"></div>
+              <div class="wall">
+                <button id="btn__login" type="button">Login</button>
+                <div class="auth__loading"></div>
+              </div>
+              <div class="tower"></div>
+            </div>
+
+
           </div>
         </form>
       </div>
@@ -100,8 +109,8 @@
           <div class="auth__submitWrapper">
             <div class="tower"></div>
             <div class="wall">
-                <button id="btn__register" type="button">Register</button>
-                <div class="auth__loading"></div>
+              <button id="btn__register" type="button">Register</button>
+              <div class="auth__loading"></div>
             </div>
             <div class="tower"></div>
           </div>
@@ -119,5 +128,6 @@
   <script src="build/style.js"></script>
   <script src="build/signIn.js"></script>
 </body>
-
+0
 </html>
+
