--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
             </label>
           </div>
 
-          <strong class="login__invalidData" id="login__invalidData-password"></strong>
+          <strong class=" auth__notification auth__notification-error" id="login__invalidData-password"></strong>
           <div class="auth__submitWrapper">
             <div class="auth__submitWrapper">
               <div class="tower"></div>
@@ -132,8 +132,9 @@
             </label>
           </div>
 
-          <strong class="login__invalidData" id="passwordReset-invalidData"></strong>
-
+          <strong class=" auth__notification auth__notification-error" id="passwordReset-invalidData"></strong>
+          <strong class=" auth__notification auth__notification-correct" id="passwordReset-correctData"></strong>
+          
             <div class="auth__submitWrapper">
               <div class="tower"></div>
               <div class="wall">
