html structure - index - basic nav

--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,600;1,700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="build/style.css" type="text/css">
 </head>
 <body>
-
+<div class="game__root">
+   <nav class="nav">
+     <ul class="nav__list">
+       <li class="nav__item"><a href="/missions" class="nav__link" data-link>Missions</a></li>
+       <li class="nav__item"><a href="/" class="nav__link" data-link>My profile</a></li>
+       <li class="nav__item"><a href="/blacksmith" class="nav__link" data-link>Blacksmith</a></li>
+       <li class="nav__item"><a href="/wizard" class="nav__link" data-link>Wizard</a></li>
+       <li class="nav__item"><a href="/inbox" class="nav__link" data-link>Inbox</a></li>
+       <li class="nav__item"><a href="/pets" class="nav__link" data-link>Pets</a></li>
+       <li class="nav__item"><a href="/stats" class="nav__link" data-link>Stats</a></li>
+     </ul>
+   </nav>
+</div>
 <script src="build/style.js"></script>
 <script src="build/index.js"></script>
 </body>
