logic - router - redirecting user to route without page refreshing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <nav class="nav">
      <ul class="nav__list">
        <li class="nav__item"><a href="/missions" class="nav__link" data-link>Missions</a></li>
-       <li class="nav__item"><a href="/" class="nav__link" data-link>My profile</a></li>
+       <li class="nav__item"><a href="/profile" class="nav__link" data-link>My profile</a></li>
        <li class="nav__item"><a href="/blacksmith" class="nav__link" data-link>Blacksmith</a></li>
        <li class="nav__item"><a href="/wizard" class="nav__link" data-link>Wizard</a></li>
        <li class="nav__item"><a href="/inbox" class="nav__link" data-link>Inbox</a></li>
