logic - router - injecting html code into game root

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
        <li class="nav__item"><a href="/stats" class="nav__link" data-link>Stats</a></li>
      </ul>
    </nav>
+
+   <main id="game__view"></main>
 </div>
 <script src="build/style.js"></script>
 <script src="build/index.js"></script>
