logic - general - logout user

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </a>
         </li>
         <li class="nav__item">
-          <div class="nav__link">
+          <div class="nav__link" id="btn-logout">
           <div class="nav__itemText nav__itemText-reverse">Logout</div>
           <div class="nav__icon"><img src="/images/menu_logout.png" alt="mace"></div>
           </div>
