style - raw view for profile

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="/settings" data-link class="nav__link nav__link-account">Settings</a>
         </li>
 
-        <li class="nav__item">
+        <li class="nav__item" id="btn-logout">
           <div class="nav__link nav__link-reverse">Logout</div>
           <div class="nav__icon"><img src="/images/menu_logout.png" alt="Logout"></div>
         </li>
