--- a/login.html
+++ b/login.html
@@ -156,7 +156,7 @@
   </main>
 
   <div class="auth__freepikAttribute">
-    <a href='https://www.freepik.com/vectors/summer'>Summer vector created by upklyak - www.freepik.com</a>
+    <a href='https://www.freepik.com/vectors/summer' target="_black">Summer vector created by upklyak - www.freepik.com</a>
   </div>
   <script src="build/style.js"></script>
   <script src="build/signIn.js"></script>
