--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,600;1,700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="build/style.css" type="text/css">
+  <script src="https://kit.fontawesome.com/17383ce736.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
