--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </li>
 
         <li class="nav__item">
-          <div class="nav__icon"><img src="/images/menu_settings.png" alt="Gear"></div>
-          <a href="/settings" data-link class="nav__link nav__link-account">Settings</a>
+          <div class="nav__icon"><img src="/images/menu_account.png" alt="account"></div>
+          <a href="/account" data-link class="nav__link nav__link-account">Settings</a>
         </li>
 
         <li class="nav__item" id="btn-logout">
