--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         </li>
 
         <li class="nav__item">
+          <div class="nav__icon"><img src="/images/menu_wizard.png" alt="Pet paws"></div>
+          <a href="/wizard" data-link class="nav__link nav__link-wizard">Wizard</a>
+        </li>
+
+        <li class="nav__item">
           <div class="nav__icon"><img src="/images/menu_guard.png" alt="Eye"></div>
           <a href="/guard" data-link class="nav__link nav__link-guard">Guard</a>
 
