logic - monsterFight - animations

--- a/app/test.html
+++ b/app/test.html
@@ -1,79 +1,121 @@
-<section class='tavern'>
-    <div class='tavern__characterWrapper'>
-        <div class='tavern__willingnessBar'></div>
-        <img class='mission__character' alt='character' src='./images/mission_character_1.png'>
-        <span></span>
-    </div>
-    <div class='tavern__detailsWrapper'>
-
-        <div class='tavern__details'>
-            <div class='mission__informations'>
-                <div class='textRool'></div>
-
-                <div class='mission__contentWrapper'>
-                    <div class='mission__content'>
-                        <div class='mission__detailsWrapper'>
-
-                            <div id='mission_content_wrapper'>
+<section class='fight'>
 
 
-                                <h2 class='mission__title'>Dark unicorn</h2>
-                                <p class='mission__description'>
-                                    ${text}
-                                </p>
-                                <div class='mission__general'>
-
-                                    <div>
-                                        <div class='mission__detail'>
-                                            <img class='mission__detailImg' src='./images/coin.png' alt='coin' />
-                                            <span class='mission__detailName'>Coins: </span>
-                                            <strong class='mission__detailResult'>12044</strong>
-                                        </div>
-                                        <div class='mission__detail'>
-                                            <img class='mission__detailImg' src='./images/mission_detail_increase.png'
-                                                alt='Level increase' />
-                                            <span class='mission__detailName'>Experience: </span>
-                                            <strong class='mission__detailResult'>125</strong>
-                                        </div>
-                                        <div class='mission__detail'>
-                                            <img class='mission__detailImg' src='./images/mission_detail_hourglass.png'
-                                                alt='hourglass' />
-                                            <span class='mission__detailName'>Time: </span>
-                                            <strong class='mission__detailResult'>10m.</strong>
-                                        </div>
-                                    </div>
-
-                                    <img src='./images/coin.png' class='mission__monsterWrapper'> </img>
+    <div class='fight__container'>
 
 
-                                </div>
 
-                                
-                            </div>
-
-
-                            <button class='mission__acceptBtn'>Accept this mission</button>
-
-                        </div>
-
-                    </div>
-                    <div class='textRool textRool-bottom'></div>
-                </div>
+        <div class='fight__weaponWrapper fight__weaponWrapper-an'>
+            <img src='${weapon.src}' class='fight__sword fight__sword-an' />
+            <img src='./images/explosion.png' class='fight__explosion fight__explosion-an' />
+        </div>
 
 
+        <div class='fight__weaponWrapper'>
+            <img src='./images/explosion.png' class='fight__explosion' />
+            ${weapon !== undefined ?
+            `<img src='${weapon.src}' class='fight__sword' />`
+            :
+            `<img src='./images/fist.png' class='fight__sword' />`
+            }
+        </div>
+
+        <div class='fight__characterWrapper fight__characterWrapper-user'>
+            <img class='fight__characterImg' src='${userData.portrait}' />
+            <div class='fight__healthBar'>
+                <div class='fight__healthPoints'>1440 / ${userStats.health}</div>
+                <div class='fight__health'></div>
             </div>
 
+            <table class='fight__statsTable'>
+                <tbody>
+                    <tr>
+                        <td>Strength</td>
+                        <td>${userStats.strength}</td>
+                    </tr>
+                    <tr>
+                        <td>Physical endurance</td>
+                        <td>${userStats.physicalEndurance}</td>
+                    </tr>
+                    <tr>
+                        <td>Defence</td>
+                        <td>${userStats.defence}</td>
+                    </tr>
+                    <tr>
+                        <td>luck</td>
+                        <td>${userStats.luck}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
 
+        <!-- <div class='fight__characterWrapper fight__characterWrapper-monster monster-an'> -->
+        <div class='fight__characterWrapper fight__characterWrapper-monster'>
+
+
+            <div class='monster__explosionWrapper'>
+                <!--  <img src='./images/explosion.png'  class='monster__explosionImg monster__explosionImg-an'/> -->
+                <img src='./images/explosion.png' class='monster__explosionImg monster__explosionImg' />
+            </div>
+
+
+            <img class='fight__characterImg' src='${userData.currentMission.monster.src}' />
+            <div class='fight__healthBar'>
+                <div class='fight__healthPoints'>1440 / ${userData.currentMission.monster.health}</div>
+                <div class='fight__health'></div>
+            </div>
+
+            <table class='fight__statsTable'>
+                <tbody>
+                    <tr>
+                        <td>Strength</td>
+                        <td>${userData.currentMission.monster.strength}</td>
+                    </tr>
+                    <tr>
+                        <td>Physical endurance</td>
+                        <td>${userData.currentMission.monster.physicalEndurance}</td>
+                    </tr>
+                    <tr>
+                        <td>Defence</td>
+                        <td>${userData.currentMission.monster.defence}</td>
+                    </tr>
+                    <tr>
+                        <td>luck</td>
+                        <td>userData.currentMission.monster.luck}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
 
-    <div class='tavern__list'>
-        <h2 class='tavern__title'>Available tavern</h2>
-        <div class='tavern__listWrapper'>
-            ${user.availableMissions.map(el => `<img src='${el.papyrus}' alt='papyrus' data-mission-id='${el.id}'
-                class='tavern__papyrus' />`)}
 
+
+
+
+    <div class='fight__summaryWrapper disabled'>
+        <div class='fight__summary'>
+            <img class='fight__characterImg' src='${userData.currentMission.character}' />
+            <h2 class='fight__summaryTitle'>${getRandomcongratulationsText()}</h2>
+            <div class='fight__summaryPayout'>
+                <div><img src='./images/coin.png' alt='coin' /> <strong>Gold: ${userData.currentMission.gold}</strong>
+                </div>
+                <div><img src='./images/mission_detail_increase.png' alt='coin' /> <strong>Experience:
+                        ${userData.currentMission.exp}</strong></div>
+            </div>
+            <button class='fight__summaryBtn fight__summaryBtn-green'>Back to tavern</button>
         </div>
     </div>
+
+    <div class='fight__summaryWrapper disabled'>
+        <div class='fight__summary'>
+            <h2 class='fight__failed'>Mission failed</h2>
+            <button class='fight__summaryBtn fight__summaryBtn-red'>Back to tavern</button>
+        </div>
+    </div>
+
+
+
+
 </section>
