logic - friends - rendering friends list

--- a/app/test.html
+++ b/app/test.html
@@ -1,28 +1,19 @@
-<section class='searchFriend'>
-    <div class='searchFriend__item searchFriend__item-search'>
-        <div class='searchFriend__list'>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Status</th>
-                        <th>Nickname</th>
-                        <th>Last visit</th>
-                    </tr>
-                </thead>
-                <tbody id='all_users'>
-                </tbody>
-            </table>
-        </div>
-        <div class='searchFriend__searchBar'>
-            <div class='searchFriend__searchIcon'>
-                <img src='./images/friends_icon_search.png' alt='search' />
-            </div>
-            <input type='text' name='search_friends_input' class='searchFriend__input'>
-        </div>
-    </div>
 
-    <div class='searchFriend__item searchFriend__item-result'>
-      
+
+
+<div class='friends__item'> 
+
+    <div class='friend'> 
+      <div class='friend__portraitWrapper'>
+        <img src='./images/hero_portraits/human_1.png' alt='portait' class='friend__portrait'/>
+      </div>
+      <h2 class='friend__name'>MMMMMMMMMMMMMMMM</h2>
+      <div class='friend__actionBar'> 
+      <div class='friend__actionBtn friend__actionBtn-profile'> 
+        <img src='./images/menu_profile.png' class='friend__icon'/> Profile
+      </div>  
+      <div class='friend__actionBtn friend__actionBtn-chat'> 
+      <img src='./images/friends_message_icon.png' class='friend__icon'/> Chat
     </div>
-    </div>
-</section>
+      </div>
+</div>
